style.css
/* General */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --light: #ece0d1;
  --dark: #38220f;
}

html {
  background-color: #ccc;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  line-height: 1.3;
  color: var(--dark);
}

h1,
h2,
h3 {
  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
}

/* Website Grid */
.container {
  width: 80%;
  margin: auto;
  display: grid;
  grid-template-areas:
    "header"
    "nav"
    "showinf"
    "coupon"
    "products"
    "footer";
  grid-row-gap: 2rem;
}

/* Header */
header {
  grid-area: header;
  text-align: center;
  font-size: 2rem;
  padding-top: 1rem;
}

/* Nav */
nav {
  grid-area: nav;
}

nav ul {
  list-style-type: none;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 0.6rem;
  text-align: center;
}

nav ul li a {
  display: block;
  background-color: var(--light);
  color: var(--dark);
  text-decoration: none;
  text-transform: uppercase;
  padding: 0.8rem 1rem;
  font-size: 1.2rem;
}

nav ul li a:hover {
  background-color: var(--dark);
  color: var(--light);
}

/* Showcase & Inf */
.subcontainer {
  grid-area: showinf;
  display: grid;
  grid-template-columns: 4fr 1fr;
  grid-template-areas:
    "showcase  sub-box-a"
    "showcase  sub-box-b"
    "showcase  sub-box-c";
  grid-gap: 1rem;
}

.showcase {
  grid-area: showcase;
  background-image: url("./img/showcase.jpg");
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
}

.showcont {
  text-align: center;
  font-size: 2rem;
  color: var(--dark);
}

.sub-box {
  text-align: center;
  padding: 1.5rem;
  background-color: var(--light);
}

.sub-box-a {
  grid-area: sub-box-a;
}

.sub-box-b {
  grid-area: sub-box-b;
}

.sub-box-c {
  grid-area: sub-box-c;
}

.sub-box h3,
.sub-box p {
  margin-bottom: 0.6rem;
}

/* Coupon */
.coupon {
  grid-area: coupon;
  background-color: var(--dark);
  color: var(--light);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2rem;
  font-size: 1.5rem;
}

.coupon form {
  display: flex;
  align-items: center;
}

.coupon form input {
  padding: 0.5rem;
  background-color: var(--light);
  color: var(--dark);
  border: none;
  outline: none;
  font-size: 1rem;
}

.coupon form input[type="submit"] {
  margin-left: 5px;
}

.coupon form input[type="submit"]:hover {
  background-color: var(--dark);
  color: var(--light);
  outline: 0.5px solid var(--light);
}

/* Products */
.products {
  grid-area: products;
  display: grid;
  grid-template-areas:
    "prod-box-a prod-box-b"
    "prod-box-c prod-box-d";
  grid-gap: 1rem;
}

.prod-box {
  background-color: var(--light);
  text-align: center;
  padding: 1rem;
  font-size: 1.4rem;
}

.prod-box i {
  margin: 0.6rem 0;
}

.prod-box-a {
  grid-area: prod-box-a;
}

.prod-box-b {
  grid-area: prod-box-b;
}

.prod-box-c {
  grid-area: prod-box-c;
}

.prod-box-d {
  grid-area: prod-box-d;
}

/* Footer */
footer {
  grid-area: footer;
  text-align: center;
  padding-bottom: 2rem;
  font-size: 2rem;
}

/* Media Queries */
@media (max-width: 700px) {
  .container {
    width: 100%;
    margin: 0;
  }

  nav ul,
  .subcontainer {
    grid-template-columns: 1fr;
  }

  .subcontainer {
    grid-template-areas:
      "showcase"
      "showcase"
      "sub-box-a"
      "sub-box-b"
      "sub-box-c";
  }

  .coupon {
    flex-direction: column;
  }

  .coupon p {
    margin-bottom: 0.5rem;
  }

  .products {
    grid-template-areas:
      "prod-box-a"
      "prod-box-b"
      "prod-box-c"
      "prod-box-d";
  }
}

